--- a/temp.css
+++ b/temp.css
@@ -1,4 +1,3 @@
-
 /* 
 .roboto-condensed-<uniquifier> {
   font-family: "Roboto Condensed", sans-serif;
@@ -7,200 +6,208 @@
   font-style: normal;
 } */
 
-
-
-body
-{
-    background-color: #f1f1f1;
-    color: #0f141e;
-    font: normal 16px 'Times New Roman', Times, serif;   
+body {
+	background-color: #f1f1f1;
+	color: #0f141e;
+	font: normal 16px "Times New Roman", Times, serif;
 }
 
-.list
-{
-    max-width: 750px;
-    width: 100%;
-    margin:0 auto;
-    padding-top: 30px;
+.list {
+	max-width: 750px;
+	width: 100%;
+	margin: 0 auto;
+	padding-top: 30px;
 }
 
 /* имеются вопросы по этой теме */
-html
-{
-    box-sizing: border-box;
+html {
+	box-sizing: border-box;
 }
 *,
 *::after,
-*::before{
-    box-sizing: inherit;
+*::before {
+	box-sizing: inherit;
 }
 /*  */
 
 /* BURGER MENU */
 
-html, body {
-  height: 100%;
-  width: 100%;
+html,
+body {
+	height: 100%;
+	width: 100%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  background-color: #eee;
+	display: flex;
+	flex-direction: column;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	background-color: #eee;
 }
 
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
-.wrapper{
-  flex-grow: 1;
+.wrapper {
+	flex-grow: 1;
 }
 
-.open{
-  display: flex !important;
+.open {
+	display: flex !important;
 }
 
-.header{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 100px;
-  background-color: #5d709d;
-  color: #FAF6F2;
-  padding: 0 40px;
+.header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	min-height: 100px;
+	background-color: #5d709d;
+	color: #faf6f2;
+	padding: 0 40px;
 }
 
-.logo{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 50%;
-  border: 1px solid #FAF6F2;
-  width: 90px;
-  height: 90px;
+.logo {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 50%;
+	border: 1px solid #faf6f2;
+	width: 90px;
+	height: 90px;
 }
 
-.nav{
-  display: flex;
-  width: 700px;
-  padding: 0 40px;
+.nav {
+	display: flex;
+	width: 700px;
+	padding: 0 40px;
 }
 
-.nav ul{
-  width: 100%;
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  /* color: #0f141e; */
+.nav ul {
+	width: 100%;
+	list-style: none;
+	display: flex;
+	justify-content: space-between;
+	/* color: #0f141e; */
 }
 
-.burger{
-  display: none;
-  position: relative;
-  z-index: 50;
-  align-items: center;
-  justify-content: flex-end;
-  width: 30px;
-  height: 18px;
-  cursor: pointer;
+.burger {
+	display: none;
+	position: relative;
+	z-index: 50;
+	align-items: center;
+	justify-content: flex-end;
+	width: 30px;
+	height: 18px;
+	cursor: pointer;
 }
 
-.burger span{
-  height: 2px;
-  width: 80%;
-  transform: scale(1);
-  background-color: #FAF6F2;
+.burger span {
+	height: 2px;
+	width: 80%;
+	transform: scale(1);
+	background-color: #faf6f2;
 }
 
-.burger::before, .burger::after{
-  content: '';
-  position: absolute;
-  height: 2px;
-  width: 100%;
-  background-color: #FAF6F2;
-  transition: all 0.3s ease 0s;
+.burger::before,
+.burger::after {
+	content: "";
+	position: absolute;
+	height: 2px;
+	width: 100%;
+	background-color: #faf6f2;
+	transition: all 0.3s ease 0s;
 }
 
-.burger::before { top: 0 }
-.burger::after { bottom: 0 }
+.burger::before {
+	top: 0;
+}
+.burger::after {
+	bottom: 0;
+}
 
 /* Добавляем класс active для анимации иконки бургера */
-.burger.active span { transform: scale(0) }
-
-.burger.active::before{
-  top: 50%;
-  transform: rotate(-45deg) translate(0, -50%);
+.burger.active span {
+	transform: scale(0);
 }
 
-.burger.active::after{
-  bottom: 50%;
-  transform: rotate(45deg) translate(0, 50%);
+.burger.active::before {
+	top: 50%;
+	transform: rotate(-45deg) translate(0, -50%);
+}
+
+.burger.active::after {
+	bottom: 50%;
+	transform: rotate(45deg) translate(0, 50%);
 }
 
 /* При разрешении экрана 900px и ниже, выводим на экран иконку бургера */
 @media (max-width: 10000px) {
+	.burger {
+		display: flex;
+	}
 
-  .burger { display: flex }
+	.nav {
+		display: none;
+		flex-direction: column;
+		position: fixed;
+		height: 100%;
+		width: 100%;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		z-index: 50;
+		overflow-y: auto;
+		padding: 50px 40px;
+		background-color: #5d709d; /* transparent - ПРОЗРАЧНЫЙ ЦВЕТ */
+		animation: burgerAnimation 0.6s;
+	}
 
-  .nav{
-      display: none;
-      flex-direction: column;
-      position: fixed;
-      height: 100%;
-      width: 100%;
-      top: 0; bottom: 0; left: 0; right: 0;
-      z-index: 50;
-      overflow-y: auto;
-      padding: 50px 40px;
-      background-color: #5d709d;    /* transparent - ПРОЗРАЧНЫЙ ЦВЕТ */
-      animation: burgerAnimation 0.6s;
-  }
-
-  .nav ul{
-      flex-direction: column;
-      row-gap: 30px;
-  }
+	.nav ul {
+		flex-direction: column;
+		row-gap: 30px;
+	}
 }
 
 @keyframes burgerAnimation {
-  from {opacity: 0}
-  to {opacity: 1}
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 /*  */
 
-
-
-
 /* Кнопка back */
-.back
-{
-  position: fixed;
-  bottom: -50px;
-  right: 50px;
-  background: #5d709d;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: 0.4s linear;
+.back {
+	position: fixed;
+	bottom: -50px;
+	right: 50px;
+	background: #5d709d;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+	transition: 0.4s linear;
+	z-index: 10;
 }
 
-.back.active
-{
-  bottom: 50px;
-  transition: 0.4s linear;
+.back.active {
+	bottom: 50px;
+	transition: 0.4s linear;
+	z-index: 10;
 }
 /*  */
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+	max-width: 1200px;
+	margin: 0 auto;
 }
